{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 11,
  "lineage": "5d35e599-d5dc-a748-4ac2-a18d862d08fb",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "website",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.120.212.37",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-05-01T07:12:23.411-07:00",
            "id": "projects/total-pillar-495011-r7/global/addresses/abdikani-website-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "abdikani-website-ip",
            "prefix_length": 0,
            "project": "total-pillar-495011-r7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/total-pillar-495011-r7/global/addresses/abdikani-website-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/total-pillar-495011-r7/global/forwardingRules/abdikani-website-http",
            "ip_address": "34.120.212.37",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "abdikani-website-http",
            "port_range": "80-80",
            "project": "total-pillar-495011-r7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/total-pillar-495011-r7/global/forwardingRules/abdikani-website-http",
            "target": "https://www.googleapis.com/compute/v1/projects/total-pillar-495011-r7/global/targetHttpProxies/abdikani-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_global_address.website",
            "google_compute_target_http_proxy.http_redirect",
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-01T07:12:35.580-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/total-pillar-495011-r7/global/targetHttpProxies/abdikani-http-proxy",
            "name": "abdikani-http-proxy",
            "project": "total-pillar-495011-r7",
            "proxy_bind": false,
            "proxy_id": 7026831773692135996,
            "self_link": "https://www.googleapis.com/compute/v1/projects/total-pillar-495011-r7/global/targetHttpProxies/abdikani-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/total-pillar-495011-r7/global/urlMaps/abdikani-http-redirect"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "website",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-01T07:13:01.974-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/total-pillar-495011-r7/global/targetHttpsProxies/abdikani-https-proxy",
            "name": "abdikani-https-proxy",
            "project": "total-pillar-495011-r7",
            "proxy_bind": false,
            "proxy_id": 8868880497474341378,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/total-pillar-495011-r7/global/targetHttpsProxies/abdikani-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/total-pillar-495011-r7/global/sslCertificates/abdikani-ssl-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/total-pillar-495011-r7/global/urlMaps/abdikani-website-urlmap"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_bucket.website_backend",
            "google_compute_managed_ssl_certificate.website",
            "google_compute_url_map.website",
            "google_storage_bucket.website"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-01T07:12:23.319-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "6mzpsDYOioQ=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/total-pillar-495011-r7/global/urlMaps/abdikani-http-redirect",
            "map_id": 5912178075505330728,
            "name": "abdikani-http-redirect",
            "path_matcher": [],
            "project": "total-pillar-495011-r7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/total-pillar-495011-r7/global/urlMaps/abdikani-http-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "website",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-01T07:12:49.366-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/total-pillar-495011-r7/global/backendBuckets/abdikani-website-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "l-y90XbJ9Nw=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/total-pillar-495011-r7/global/urlMaps/abdikani-website-urlmap",
            "map_id": 365080963494513166,
            "name": "abdikani-website-urlmap",
            "path_matcher": [],
            "project": "total-pillar-495011-r7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/total-pillar-495011-r7/global/urlMaps/abdikani-website-urlmap",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_bucket.website_backend",
            "google_storage_bucket.website"
          ]
        }
      ]
    }
  ]
}